add logging org
